# teloxide

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
crates/teloxide/: Cargo.toml
crates/teloxide-core/: Cargo.toml
crates/teloxide-core/src/: codegen.rs  lib.rs
crates/teloxide-core/src/adaptors/: trace.rs
crates/teloxide-core/src/codegen/: patch.rs
crates/teloxide-core/src/types/: chat_permissions.rs
crates/teloxide-macros/: Cargo.toml
crates/teloxide/src/dispatching/dialogue/storage/: redis_storage.rs
crates/teloxide/src/update_listeners/webhooks/: axum.rs
